--- a/menu-pizzamigo/web/index.html
+++ b/menu-pizzamigo/web/index.html
@@ -1,98 +1,111 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/pizza.css">
-    <title>Pizzamigo</title>
-</head>
-<body>
-    <nav class="navbar sticky-top navbar-expand-lg bg-bermellon">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="../PIZZAMIGO-removebg-preview.png" alt="" srcset=""></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link text-light active" aria-current="page" href="#">Inicio</a>
-              <a class="nav-link text-light" href="pizza.html">Pizza</a>
-              <a class="nav-link text-light" href="desayuno.html">Desayuno/Merienda</a>
-              <a class="nav-link text-light" href="plato.html">Minutas</a>
-              <a class="nav-link text-light" href="ensalada.html">Ensaladas</a>
-              <a class="nav-link text-light" href="bebidas.html">Bebidas</a>
-              <a class="nav-link text-light" href="postres.html">Postre</a>
-              <a class="text-light tit" href="../../menu-pizzamigo-english/web/index.html"><img class="logo-ingles " src="../idioma-en-ingles.png"/> English</a>
 
-            </div>
-          </div>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/pizza.css">
+  <title>Pizzamigo</title>
+</head>
+
+<body>
+  <nav class="navbar sticky-top navbar-expand-lg bg-bermellon">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"><img src="../PIZZAMIGO-removebg-preview.png" alt="" srcset=""></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link text-light active" aria-current="page" href="#">Inicio</a>
+          <a class="nav-link text-light" href="pizza.html">Pizza</a>
+          <a class="nav-link text-light" href="desayuno.html">Desayuno/Merienda</a>
+          <a class="nav-link text-light" href="plato.html">Minutas</a>
+          <a class="nav-link text-light" href="ensalada.html">Ensaladas</a>
+          <a class="nav-link text-light" href="bebidas.html">Bebidas</a>
+          <a class="nav-link text-light" href="postres.html">Postre</a>
+          <a class="text-light tit" href="../../menu-pizzamigo-english/web/index.html"><img class="logo-ingles "
+              src="../idioma-en-ingles.png" /> English</a>
+
         </div>
-      </nav>
-      <!-- fin navbar -->
- 
-      <div class="container">
-        <!-- <div class="row">
+      </div>
+    </div>
+  </nav>
+  <!-- fin navbar -->
+
+  <div class="container">
+    <!-- <div class="row">
           <div class="col-12 texto text-end">
             <a class="text-light" href="../../menu-pizzamigo-english/web/index.html"><img class="logo-ingles" src="../idioma-en-ingles.png"/></a>
           </div>
         </div> -->
-        <div class="row ">
-            <div class=" col-12 mt-5 mb-3 d-flex  justify-content-center">
-              <a href="pizza.html">  <img class="redo" src="../abhishek-hajare-0UcHlaN-hgQ-unsplash.jpg" alt="pizza" srcset=""> </a>
-            </div>
-            <div class="col-12 text-center">
-                <span class="texto text-light ">Pizza</span> 
+    <div class="row ">
+      <div class=" col-12 mt-5 mb-3 d-flex  justify-content-center">
+        <a href="pizza.html"> <img class="redo" src="../abhishek-hajare-0UcHlaN-hgQ-unsplash.jpg" alt="pizza" srcset="">
+        </a>
+      </div>
+      <div class="col-12 text-center">
+        <span class="texto text-light ">Pizza</span>
 
-            </div>
-            <div class=" col-12 mt-5 mb-3 d-flex justify-content-center">
-                <a href="desayuno.html"><img class="redo" src="../desa.png" alt="desayuno" srcset=""></a>
-            </div>
-            <div class="col-12 text-center text-light">
-                <span class="texto">Desayuno/Merienda</span>
+      </div>
+      <div class=" col-12 mt-5 mb-3 d-flex justify-content-center">
+        <a href="desayuno.html"><img class="redo" src="../desa.png" alt="desayuno" srcset=""></a>
+      </div>
+      <div class="col-12 text-center text-light">
+        <span class="texto">Desayuno/Merienda</span>
 
-            </div>
-            <div class=" col-12 mt-5 mb-3 d-flex justify-content-center">
-              <a href="plato.html"> <img class="redo" src="../Al plato.webp" alt="Al plato" srcset=""></a>
-            </div>
-            <div class="col-12 text-center text-light">
-                <span class="texto">Minutas</span>
+      </div>
+      <div class=" col-12 mt-5 mb-3 d-flex justify-content-center">
+        <a href="plato.html"> <img class="redo" src="../Al plato.webp" alt="Al plato" srcset=""></a>
+      </div>
+      <div class="col-12 text-center text-light">
+        <span class="texto">Minutas</span>
 
-            </div>
-            <div class=" col-12 mt-5 mb-3 d-flex  justify-content-center">
-              <a href="ensalada.html">  <img class="redo" src="../nadine-primeau--ftWfohtjNw-unsplash (1).jpg" alt="ensalada" srcset=""> </a>
-            </div>
-            <div class="col-12 text-center">
-                <span class="texto text-light ">Ensalada</span> 
+      </div>
+      <div class=" col-12 mt-5 mb-3 d-flex  justify-content-center">
+        <a href="ensalada.html"> <img class="redo" src="../nadine-primeau--ftWfohtjNw-unsplash (1).jpg" alt="ensalada"
+            srcset=""> </a>
+      </div>
+      <div class="col-12 text-center">
+        <span class="texto text-light ">Ensalada</span>
 
-            </div>
-            <div class=" col-12 mt-5 mb-3 d-flex justify-content-center">
-             <a href="bebidas.html"> <img class="redo" src="../andrey-ilkevich-Qvnohn4GyJA-unsplash.jpg" alt="Bebidas" srcset=""></a>
-           </div>
-           <div class="col-12 text-center text-light">
-               <span class="texto">Bebidas</span>
+      </div>
+      <div class=" col-12 mt-5 mb-3 d-flex justify-content-center">
+        <a href="bebidas.html"> <img class="redo" src="../andrey-ilkevich-Qvnohn4GyJA-unsplash.jpg" alt="Bebidas"
+            srcset=""></a>
+      </div>
+      <div class="col-12 text-center text-light">
+        <span class="texto">Bebidas</span>
 
-           </div>
-           <div class=" col-12 mt-5 mb-3 d-flex justify-content-center">
-            <a href="postres.html"> <img class="redo" src="../kobby-mendez-idTwDKt2j2o-unsplash.jpg" alt="Postres" srcset=""></a>
-         </div>
-         <div class="col-12 text-center text-light">
-             <span class="texto">Postre</span>
+      </div>
+      <div class=" col-12 mt-5 mb-3 d-flex justify-content-center">
+        <a href="postres.html"> <img class="redo" src="../kobby-mendez-idTwDKt2j2o-unsplash.jpg" alt="Postres"
+            srcset=""></a>
+      </div>
+      <div class="col-12 text-center text-light">
+        <span class="texto">Postre</span>
 
-         </div>
-        </div>
+      </div>
     </div>
-    <footer class="mt-5 container-fluid mb-5">
-        <div class="row">
-          <span class="text-light text-center">Copyright 2023</span>
-        </div>
-        <div class="row">
-          <span class="text-center text-light">Creado por <a class="footer" href="https://www.instagram.com/fedex_rater/">Federico Hidalgo</a></span>
-        </div>
-    </footer>
-      <script src="./js/menu.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+  </div>
+  <footer class="mt-5 container-fluid mb-5">
+    <div class="row">
+      <span class="text-light text-center">Copyright 2023</span>
+    </div>
+    <div class="row">
+      <span class="text-center text-light">Creado por <a class="footer"
+          href="https://www.instagram.com/fedex_rater/">Federico Hidalgo</a></span>
+    </div>
+  </footer>
+  <script src="./js/menu.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
