--- a/menu-pizzamigo/web/desayuno.html
+++ b/menu-pizzamigo/web/desayuno.html
@@ -33,7 +33,8 @@
             <a class="nav-link text-light" href="ensalada.html">Ensaladas</a>
             <a class="nav-link text-light" href="bebidas.html">Bebidas</a>
             <a class="nav-link text-light" href="postres.html">Postre</a>
-            <a class="text-light tit" href="../../menu-pizzamigo-english/web/index.html"><img class="logo-ingles " src="../idioma-en-ingles.png"/> English</a>
+            <a class="text-light tit" href="../../menu-pizzamigo-english/web/index.html"><img class="logo-ingles "
+                src="../idioma-en-ingles.png" /> English</a>
           </div>
         </div>
       </div>
@@ -52,13 +53,13 @@
         </div>
         <div class="col-5">
           <!-- imagen del desayuno -->
-          <img class="precio" src="../800.png" alt="" srcset="">
+          <img class="precio" src="../1000.png" alt="" srcset="">
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-5">
           <!-- imagen del desayuno -->
-          <img class="precio" src="../1000.png" alt="" srcset="">
+          <img class="precio" src="../1200.png" alt="" srcset="">
         </div>
         <div class="col-7 ">
           <h2 class="marco text-center">CONTINENTAL:</h2>
@@ -70,7 +71,7 @@
 
         <div class="col-6 text-center marco p-3" style="font-size: 1.3rem;">PROMO LICUADO + 1/2 TOSTADO</div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../1200.png" alt="" srcset="">
+          <img class="precio" src="../1300.png" alt="" srcset="">
         </div>
       </div>
 
@@ -78,7 +79,7 @@
       <div class="row mt-5">
         <div class="col-5">
           <!-- imagen del desayuno -->
-          <img class="precio" src="../1000.png" alt="" srcset="">
+          <img class="precio" src="../1300.png" alt="" srcset="">
         </div>
         <div class="col-7">
           <h2 class="marco text-center">LIGHT:</h2>
@@ -93,13 +94,13 @@
         </div>
         <div class="col-5">
           <!-- imagen del desayuno -->
-          <img class="precio" src="../1400.png" alt="" srcset="">
+          <img class="precio" src="../1700.png" alt="" srcset="">
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-5">
           <!-- imagen del desayuno -->
-          <img class="precio" src="../1200.png" alt="" srcset="">
+          <img class="precio" src="../1400.png" alt="" srcset="">
         </div>
         <div class="col-7">
           <h2 class="marco text-center">Jamón y Queso:</h2>
@@ -115,7 +116,7 @@
         </div>
         <div class="col-5">
           <!-- imagen del desayuno -->
-          <img class="precio" src="../1400.png" alt="" srcset="">
+          <img class="precio" src="../1800.png" alt="" srcset="">
         </div>
       </div>
 
@@ -123,7 +124,7 @@
       <div class="row mt-5">
         <div class="col-5">
           <!-- imagen del desayuno -->
-          <img class="precio" src="../2200.png" alt="" srcset="">
+          <img class="precio" src="../3300.png" alt="" srcset="">
         </div>
         <div class="col-7 ">
           <h2 class="marco text-center">COMBO AMERICANO:</h2>
@@ -141,62 +142,62 @@
           <p class="text-start">CAFÉ POCILLO</p>
         </div>
         <div class="col-6 mt-5">
-          <img  class="precio" src="../400.png" alt="$400" srcset="">
+          <img class="precio" src="../400.png" alt="$400" srcset="">
         </div>
         <div class="col-6 mt-5">
           <p>CAFÉ JARRITO</p>
         </div>
         <div class="col-6 mt-5">
-          <img  class="precio" src="../500.png" alt="$500" srcset="">
-          
+          <img class="precio" src="../500.png" alt="$500" srcset="">
+
         </div>
         <div class="col-6 mt-5">
           <p>CAFÉ DOBLE</p>
         </div>
         <div class="col-6 mt-5">
-          <img  class="precio" src="../600.png" alt="$600" srcset="">
+          <img class="precio" src="../600.png" alt="$600" srcset="">
           <!-- precio -->
         </div>
         <div class="col-6 mt-5">
           <p>CAPUCHINO</p>
         </div>
         <div class="col-6 mt-5">
-          <img  class="precio" src="../700.png" alt="$700" srcset="">
+          <img class="precio" src="../700.png" alt="$700" srcset="">
           <!-- precio -->
         </div>
         <div class="col-6 mt-5">
           <p>TÉ- MATE DOBLE</p>
         </div>
         <div class="col-6 mt-5">
-          <img  class="precio" src="../500.png" alt="$500" srcset="">
+          <img class="precio" src="../500.png" alt="$500" srcset="">
           <!-- precio -->
         </div>
         <div class="col-6 mt-5">
           <p>JUGO CHICO</p>
         </div>
         <div class="col-6 mt-5">
-          <img  class="precio" src="../400.png" alt="$400" srcset="">
+          <img class="precio" src="../400.png" alt="$400" srcset="">
           <!-- precio -->
         </div>
         <div class="col-6 mt-5">
           <p>JUGO GRANDE</p>
         </div>
         <div class="col-6 mt-5">
-          <img  class="precio" src="../900.png" alt="$900" srcset="">
+          <img class="precio" src="../900.png" alt="$900" srcset="">
           <!-- precio -->
         </div>
         <div class="col-6 mt-5">
           <p>LICUADOS</p>
         </div>
         <div class="col-6 mt-5">
-          <img  class="precio" src="../900.png" alt="$900" srcset="">
+          <img class="precio" src="../900.png" alt="$900" srcset="">
           <!-- precio -->
         </div>
         <div class="col-6 mt-5">
           <p>SUBMARINO</p>
         </div>
         <div class="col-6 mt-5">
-          <img  class="precio" src="../700.png" alt="$700" srcset="">
+          <img class="precio" src="../700.png" alt="$700" srcset="">
           <!-- precio -->
         </div>
       </div>
@@ -207,64 +208,64 @@
         </div>
         <div class="row mt-5">
           <div class="col-6 mt-5">
-          <img  class="precio" src="../200.png" alt="$300" srcset="">
-          <!-- precio -->
+            <img class="precio" src="../200.png" alt="$300" srcset="">
+            <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">MEDIALUNAS</p>
           </div>
           <div class="col-6 mt-5">
-          <img  class="precio" src="../150.png" alt="$300" srcset="">
-          <!-- precio -->
+            <img class="precio" src="../150.png" alt="$300" srcset="">
+            <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">CRIOLLO</p>
           </div>
           <div class="col-6 mt-5">
-          <img  class="precio" src="../300.png" alt="$300" srcset="">
-          <!-- precio -->
+            <img class="precio" src="../300.png" alt="$300" srcset="">
+            <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">MEDIALUNAS JYQ</p>
           </div>
           <div class="col-6 mt-5">
-          <img  class="precio" src="../150.png" alt="$300" srcset="">
-          <!-- precio -->
+            <img class="precio" src="../150.png" alt="$300" srcset="">
+            <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">TOSTADAS DE CAMPO X2</p>
           </div>
           <div class="col-6 mt-5">
-          <img  class="precio" src="../200.png" alt="$300" srcset="">
-          <!-- precio -->
+            <img class="precio" src="../200.png" alt="$300" srcset="">
+            <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">MANTECA Y MERMELADA O QUESO</p>
           </div>
           <div class="col-6 mt-5">
-          <img  class="precio" src="../500.png" alt="$500" srcset="">
-          <!-- precio -->
+            <img class="precio" src="../500.png" alt="$500" srcset="">
+            <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">HUEVO REVUELTO</p>
           </div>
           <div class="col-6 mt-5">
-          <img  class="precio" src="../500.png" alt="$500" srcset="">
-          <!-- precio -->
+            <img class="precio" src="../500.png" alt="$500" srcset="">
+            <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">CAZUELA PALTA</p>
           </div>
           <div class="col-6 mt-5">
-          <img  class="precio" src="../500.png" alt="$500" srcset="">
-          <!-- precio -->
+            <img class="precio" src="../500.png" alt="$500" srcset="">
+            <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">JAMÓN Y QUESO</p>
           </div>
           <div class="col-6 mt-5">
-          <img  class="precio" src="../800.png" alt="$300" srcset="">
-          <!-- precio -->
+            <img class="precio" src="../1000.png" alt="$300" srcset="">
+            <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">MIXTO DE JYQ</p>
