--- a/menu-pizzamigo-english/web/desayuno.html
+++ b/menu-pizzamigo-english/web/desayuno.html
@@ -19,7 +19,8 @@
     <!-- menu hamburguesa -->
     <nav class="navbar sticky-top navbar-expand-lg bg-bermellon">
       <div class="container-fluid ">
-        <a class="navbar-brand" href="#"><img src="../../menu-pizzamigo/PIZZAMIGO-removebg-preview.png" alt="" srcset=""></a>
+        <a class="navbar-brand" href="#"><img src="../../menu-pizzamigo/PIZZAMIGO-removebg-preview.png" alt=""
+            srcset=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
           aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -61,13 +62,15 @@
         </div>
         <div class="col-7 ">
           <h2 class="marco text-center">CONTINENTAL:</h2>
-          <p class="text-end">Infusion + Croissant or Creole Bread + Butter, Jam or Dulce de leche + Juice & Sparkling Water
+          <p class="text-end">Infusion + Croissant or Creole Bread + Butter, Jam or Dulce de leche + Juice & Sparkling
+            Water
           </p>
         </div>
       </div>
       <div class="row mt-5">
 
-        <div class="col-6 text-center marco p-3" style="font-size: 1.3rem;">OFFER SMOOTHIE + ½ HAM & CHEESE GRILLED  SANDWICH</div>
+        <div class="col-6 text-center marco p-3" style="font-size: 1.3rem;">OFFER SMOOTHIE + ½ HAM & CHEESE GRILLED
+          SANDWICH</div>
         <div class="col-6 mt-5">
           <img class="precio" src="../../menu-pizzamigo/1200.png" alt="" srcset="">
         </div>
@@ -88,7 +91,8 @@
       <div class="row mt-5">
         <div class="col-7 ">
           <h2 class="marco text-center">PROTEIN CONTENT:</h2>
-          <p class="text-start">Infusion + 2 Country Bread + Scrambled Eggs + Avocado + Fruits Salad + Juice & Sparkling Water </p>
+          <p class="text-start">Infusion + 2 Country Bread + Scrambled Eggs + Avocado + Fruits Salad + Juice & Sparkling
+            Water </p>
         </div>
         <div class="col-5">
           <!-- imagen del desayuno -->
@@ -109,7 +113,8 @@
       <div class="row mt-5">
         <div class="col-7">
           <h2 class="marco text-center">AMERICAN:</h2>
-          <p class="text-center">Infusion + 3 Country Bread + Egg With Bacon or Ham + Slice of Ham & Cheese + Fruit Salad + Juice & Sparkling Water. </p>
+          <p class="text-center">Infusion + 3 Country Bread + Egg With Bacon or Ham + Slice of Ham & Cheese + Fruit
+            Salad + Juice & Sparkling Water. </p>
         </div>
         <div class="col-5">
           <!-- imagen del desayuno -->
@@ -137,62 +142,62 @@
           <p class="text-start">SMALL CUP OF COFFEE</p>
         </div>
         <div class="col-6 mt-5">
-          <img  class="precio" src="../../menu-pizzamigo/400.png" alt="$400" srcset="">
+          <img class="precio" src="../../menu-pizzamigo/400.png" alt="$400" srcset="">
         </div>
         <div class="col-6 mt-5">
           <p>MEDIUM CUP OF COFFEE</p>
         </div>
         <div class="col-6 mt-5">
-          <img  class="precio" src="../../menu-pizzamigo/500.png" alt="$500" srcset="">
-          
+          <img class="precio" src="../../menu-pizzamigo/500.png" alt="$500" srcset="">
+
         </div>
         <div class="col-6 mt-5">
           <p>DOUBLE COFFEE</p>
         </div>
         <div class="col-6 mt-5">
-          <img  class="precio" src="../../menu-pizzamigo/600.png" alt="$600" srcset="">
+          <img class="precio" src="../../menu-pizzamigo/600.png" alt="$600" srcset="">
           <!-- precio -->
         </div>
         <div class="col-6 mt-5">
           <p>CAPUCHINO</p>
         </div>
         <div class="col-6 mt-5">
-          <img  class="precio" src="../../menu-pizzamigo/700.png" alt="$700" srcset="">
+          <img class="precio" src="../../menu-pizzamigo/700.png" alt="$700" srcset="">
           <!-- precio -->
         </div>
         <div class="col-6 mt-5">
           <p>TEA- DOUBLE MATE</p>
         </div>
         <div class="col-6 mt-5">
-          <img  class="precio" src="../../menu-pizzamigo/500.png" alt="$500" srcset="">
+          <img class="precio" src="../../menu-pizzamigo/500.png" alt="$500" srcset="">
           <!-- precio -->
         </div>
         <div class="col-6 mt-5">
           <p>SMALL JUICE</p>
         </div>
         <div class="col-6 mt-5">
-          <img  class="precio" src="../../menu-pizzamigo/400.png" alt="$400" srcset="">
+          <img class="precio" src="../../menu-pizzamigo/400.png" alt="$400" srcset="">
           <!-- precio -->
         </div>
         <div class="col-6 mt-5">
           <p>BIG JUICE</p>
         </div>
         <div class="col-6 mt-5">
-          <img  class="precio" src="../../menu-pizzamigo/900.png" alt="$900" srcset="">
+          <img class="precio" src="../../menu-pizzamigo/900.png" alt="$900" srcset="">
           <!-- precio -->
         </div>
         <div class="col-6 mt-5">
           <p>SMOOTHIE</p>
         </div>
         <div class="col-6 mt-5">
-          <img  class="precio" src="../../menu-pizzamigo/900.png" alt="$900" srcset="">
+          <img class="precio" src="../../menu-pizzamigo/900.png" alt="$900" srcset="">
           <!-- precio -->
         </div>
         <div class="col-6 mt-5">
           <p>HOT MILK WITH CHOCOLATE</p>
         </div>
         <div class="col-6 mt-5">
-          <img  class="precio" src="../../menu-pizzamigo/700.png" alt="$700" srcset="">
+          <img class="precio" src="../../menu-pizzamigo/700.png" alt="$700" srcset="">
           <!-- precio -->
         </div>
       </div>
@@ -203,64 +208,64 @@
         </div>
         <div class="row mt-5">
           <div class="col-6 mt-5">
-          <img  class="precio" src="../../menu-pizzamigo/200.png" alt="$300" srcset="">
-          <!-- precio -->
+            <img class="precio" src="../../menu-pizzamigo/200.png" alt="$300" srcset="">
+            <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">CROISSANT</p>
           </div>
           <div class="col-6 mt-5">
-          <img  class="precio" src="../../menu-pizzamigo/150.png" alt="$300" srcset="">
-          <!-- precio -->
+            <img class="precio" src="../../menu-pizzamigo/150.png" alt="$300" srcset="">
+            <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">CREOLE BREAD</p>
           </div>
           <div class="col-6 mt-5">
-          <img  class="precio" src="../../menu-pizzamigo/300.png" alt="$300" srcset="">
-          <!-- precio -->
+            <img class="precio" src="../../menu-pizzamigo/300.png" alt="$300" srcset="">
+            <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">CROISSANT HAM & CHEESE</p>
           </div>
           <div class="col-6 mt-5">
-          <img  class="precio" src="../../menu-pizzamigo/150.png" alt="$300" srcset="">
-          <!-- precio -->
+            <img class="precio" src="../../menu-pizzamigo/150.png" alt="$300" srcset="">
+            <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">2 FIELD TOAST</p>
           </div>
           <div class="col-6 mt-5">
-          <img  class="precio" src="../../menu-pizzamigo/200.png" alt="$300" srcset="">
-          <!-- precio -->
+            <img class="precio" src="../../menu-pizzamigo/200.png" alt="$300" srcset="">
+            <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">BUTTER & JAM OR CHEESE</p>
           </div>
           <div class="col-6 mt-5">
-          <img  class="precio" src="../../menu-pizzamigo/500.png" alt="$500" srcset="">
-          <!-- precio -->
+            <img class="precio" src="../../menu-pizzamigo/500.png" alt="$500" srcset="">
+            <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">SCRAMBLED EGGS</p>
           </div>
           <div class="col-6 mt-5">
-          <img  class="precio" src="../../menu-pizzamigo/500.png" alt="$500" srcset="">
-          <!-- precio -->
+            <img class="precio" src="../../menu-pizzamigo/500.png" alt="$500" srcset="">
+            <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">GUACAMOLE</p>
           </div>
           <div class="col-6 mt-5">
-          <img  class="precio" src="../../menu-pizzamigo/500.png" alt="$500" srcset="">
-          <!-- precio -->
+            <img class="precio" src="../../menu-pizzamigo/500.png" alt="$500" srcset="">
+            <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">SLICE OF HAM & CHEESE</p>
           </div>
           <div class="col-6 mt-5">
-          <img  class="precio" src="../../menu-pizzamigo/800.png" alt="$300" srcset="">
-          <!-- precio -->
+            <img class="precio" src="../../menu-pizzamigo/800.png" alt="$300" srcset="">
+            <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">MIXED HAM & CHEESE</p>
