--- a/menu-pizzamigo-english/web/plato.html
+++ b/menu-pizzamigo-english/web/plato.html
@@ -77,19 +77,19 @@
         <p>Chicken Steak With Garnish</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../../menu-pizzamigo/2000.png" alt="2000" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/2200.png" alt="2000" srcset="">
       </div>
       <div class="col-6 mt-5">
         <p>Frontier Steak</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../../menu-pizzamigo/2700.png" alt="2700" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/3000.png" alt="2700" srcset="">
       </div>
       <div class="col-6 mt-5">
         <p>Steak with Mushrooms Sauce</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../../menu-pizzamigo/2700.png" alt="2700" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/3000.png" alt="2700" srcset="">
       </div>
       <div class="col-6 mt-5">
         <p>Chicken with mushrooms sauce</p>
@@ -107,13 +107,13 @@
         <p>Costelette With Garnish</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../../menu-pizzamigo/2200.png" alt="2200" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/2500.png" alt="2200" srcset="">
       </div>
       <div class="col-6 mt-5">
         <p>Milanesa with fried egg</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../../menu-pizzamigo/2200.png" alt="2200" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/2500.png" alt="2200" srcset="">
       </div>
       <!-- fin de al plato -->
 
@@ -123,11 +123,11 @@
       </div>
       <div class="col-6 text-center">
         <p>Per Unite</p>
-        <img class="precio" src="../../menu-pizzamigo/250.png" alt="" srcset="">
+        <img class="precio" src="../../menu-pizzamigo/300.png" alt="" srcset="">
       </div>
       <div class="col-6 text-center">
         <p>Dozen</p>
-        <img class="precio" src="../../menu-pizzamigo/2500.png" alt="" srcset="">
+        <img class="precio" src="../../menu-pizzamigo/2800.png" alt="" srcset="">
       </div>
       <!-- contenido de entradas -->
       <div class="col-12 text-center mt-5">
@@ -156,25 +156,56 @@
       </div>
       <!-- contenido sandwich -->
       <div class="col-6 mt-5 ">
-        <img class="precio " src="../../menu-pizzamigo/2000.png" alt="precio" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/2200.png" alt="precio" srcset="">
       </div>
       <div class="col-6 mt-5 text-end">
         <p>LOMO</p>
       </div>
 
       <div class="col-6 mt-5 ">
-        <img class="precio " src="../../menu-pizzamigo/2000.png" alt="precio" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/2200.png" alt="precio" srcset="">
       </div>
       <div class="col-6 mt-5 text-end">
         <p>MILA</p>
       </div>
 
       <div class="col-5 mt-5 ">
-        <img class="precio " src="../../menu-pizzamigo/2000.png" alt="precio" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/2200.png" alt="precio" srcset="">
       </div>
       <div class="col-7 mt-5 text-end">
         <p>BURGUER</p>
       </div>
+
+
+      <div class="col-12  mt-5 text-center">
+        <p class="marco">CHACARERO FOR:</p>
+      </div>
+      <div class="col-6  ">
+        <p>1 PERSON</p>
+        <img class="precio " src="../../menu-pizzamigo/2500.png" alt="precio" srcset="">
+      </div>
+      <div class="col-6  ">
+        <p>2 PERSONS</p>
+        <img class="precio " src="../../menu-pizzamigo/4500.png" alt="$4500" srcset="">
+      </div>
+
+      <div class="col-5 mt-5 ">
+        <img class="precio " src="../../menu-pizzamigo/800.png" alt="precio" srcset="">
+      </div>
+      <div class="col-7 mt-5 text-end">
+        <p>ONE SERVING OF FRIED POTATOES</p>
+      </div>
+
+      <div class="col-5 mt-5 ">
+        <img class="precio " src="../../menu-pizzamigo/1200.png" alt="precio" srcset="">
+      </div>
+      <div class="col-7 mt-5 text-center">
+        <p>PAPAS BRAVAS (HOT FRIES WITH CHEDDAR AND BACON)</p>
+      </div>
+
+
+
+
       <!-- fin sandwich -->
 
       <div class="col-6"></div>
