--- a/menu-pizzamigo-english/web/pizza.html
+++ b/menu-pizzamigo-english/web/pizza.html
@@ -54,10 +54,10 @@
       </div>
       <div class="row">
         <div class="col-6 d-flex justify-content-center">
-          <img class="precio-metro" src="../../menu-pizzamigo/2500.png" alt="$2400" srcset="">
+          <img class="precio-metro" src="../../menu-pizzamigo/3000.png" alt="$3000" srcset="">
         </div>
         <div class="col-6 d-flex justify-content-center">
-          <img class="precio-metro" src="../../menu-pizzamigo/5000.png" alt="$4800" srcset="">
+          <img class="precio-metro" src="../../menu-pizzamigo/6000.png" alt="6000" srcset="">
         </div>
       </div>
       <div class="row text-start">
