--- a/menu-pizzamigo-english/web/plato.html
+++ b/menu-pizzamigo-english/web/plato.html
@@ -50,52 +50,60 @@
       <div class="col-12"></div>
       <!-- contenido de al plato -->
       <div class="col-6 mt-5">
+        <!-- milanesa con guarnicion -->
         <p>Milanesa With Garnish</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../../menu-pizzamigo/2300.png" alt="2000" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/2800.png" alt="2800" srcset="">
       </div>
       <div class="col-6 mt-5">
+        <!-- bife de lomo c/guarnicion -->
         <p>Steak With Garnish</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../../menu-pizzamigo/2900.png" alt="2400" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/3500.png" alt="3500" srcset="">
       </div>
       <div class="col-6 mt-5">
+        <!-- napolitana -->
         <p>Milanesa Napolitana With Garnish</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../../menu-pizzamigo/2500.png" alt="2200" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/3000.png" alt="3000" srcset="">
       </div>
       <div class="col-6 mt-5">
+        <!-- costilla a la barbacoa -->
         <p>Barbecue Ribs With Spain Potatoes</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../../menu-pizzamigo/2800.png" alt="2600" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/3300.png" alt="3300" srcset="">
       </div>
       <div class="col-6 mt-5">
+        <!-- bife de pollo -->
         <p>Chicken Steak With Garnish</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../../menu-pizzamigo/2200.png" alt="2000" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/2800.png" alt="2800" srcset="">
       </div>
       <div class="col-6 mt-5">
+        <!-- lomo a la frontera -->
         <p>Frontier Steak</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../../menu-pizzamigo/3000.png" alt="2700" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/3500.png" alt="3500" srcset="">
       </div>
       <div class="col-6 mt-5">
+        <!-- lomo al champ -->
         <p>Steak with Mushrooms Sauce</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../../menu-pizzamigo/3000.png" alt="2700" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/3500.png" alt="3500" srcset="">
       </div>
       <div class="col-6 mt-5">
+        <!-- pollo al champi -->
         <p>Chicken with mushrooms sauce</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../../menu-pizzamigo/2200.png" alt="2200" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/3000.png" alt="3000" srcset="">
       </div>
       <div class="col-6 mt-5">
         <p>Mix Brochet</p>
@@ -104,16 +112,18 @@
         <img class="precio " src="../../menu-pizzamigo/precio-sin-num.png" alt="precio" srcset="">
       </div>
       <div class="col-6 mt-5">
+        <!-- costeleta con guar -->
         <p>Costelette With Garnish</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../../menu-pizzamigo/2500.png" alt="2200" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/3000.png" alt="3000" srcset="">
       </div>
       <div class="col-6 mt-5">
+        <!-- mila a caballo -->
         <p>Milanesa with fried egg</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../../menu-pizzamigo/2500.png" alt="2200" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/3000.png" alt="3000" srcset="">
       </div>
       <!-- fin de al plato -->
 
@@ -127,7 +137,7 @@
       </div>
       <div class="col-6 text-center">
         <p>Dozen</p>
-        <img class="precio" src="../../menu-pizzamigo/2800.png" alt="" srcset="">
+        <img class="precio" src="../../menu-pizzamigo/3000.png" alt="" srcset="">
       </div>
       <!-- contenido de entradas -->
       <div class="col-12 text-center mt-5">
@@ -156,21 +166,21 @@
       </div>
       <!-- contenido sandwich -->
       <div class="col-6 mt-5 ">
-        <img class="precio " src="../../menu-pizzamigo/2200.png" alt="precio" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/2500.png" alt="precio" srcset="">
       </div>
       <div class="col-6 mt-5 text-end">
         <p>LOMO</p>
       </div>
 
       <div class="col-6 mt-5 ">
-        <img class="precio " src="../../menu-pizzamigo/2200.png" alt="precio" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/2500.png" alt="precio" srcset="">
       </div>
       <div class="col-6 mt-5 text-end">
         <p>MILA</p>
       </div>
 
       <div class="col-5 mt-5 ">
-        <img class="precio " src="../../menu-pizzamigo/2200.png" alt="precio" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/2300.png" alt="precio" srcset="">
       </div>
       <div class="col-7 mt-5 text-end">
         <p>BURGUER</p>
@@ -182,11 +192,11 @@
       </div>
       <div class="col-6  ">
         <p>1 PERSON</p>
-        <img class="precio " src="../../menu-pizzamigo/2500.png" alt="precio" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/3000.png" alt="precio" srcset="">
       </div>
       <div class="col-6  ">
         <p>2 PERSONS</p>
-        <img class="precio " src="../../menu-pizzamigo/4500.png" alt="$4500" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/5500.png" alt="$4500" srcset="">
       </div>
 
       <div class="col-5 mt-5 ">
