--- a/menu-pizzamigo/web/pizza.html
+++ b/menu-pizzamigo/web/pizza.html
@@ -54,11 +54,14 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-6 d-flex justify-content-center">
-          <img class="precio-metro" src="../3000.png" alt="$3000" srcset="">
+        <div class="col-6 d-flex justify-content-center align-items-center fondoPrecio">
+          <!-- <img class="precio-metro" src="../3000.png" alt="$3000" srcset=""> -->
+          <span class="precioNumero">$3000</span>
+
         </div>
-        <div class="col-6 d-flex justify-content-center">
-          <img class="precio-metro" src="../6000.png" alt="$6000" srcset="">
+        <div class="col-6 d-flex justify-content-center align-items-center fondoPrecio ">
+          <!-- <img class="precio-metro" src="../6000.png" alt="$6000" srcset=""> -->
+          <span class="precioNumero">$6000</span>
         </div>
       </div>
       <div class="row text-start">
