--- a/menu-pizzamigo-english/web/plato.html
+++ b/menu-pizzamigo-english/web/plato.html
@@ -105,12 +105,12 @@
       <div class="col-6 mt-5">
         <img class="precio " src="../../menu-pizzamigo/3000.png" alt="3000" srcset="">
       </div>
-      <div class="col-6 mt-5">
+      <!-- <div class="col-6 mt-5">
         <p>Mix Brochet</p>
       </div>
       <div class="col-6 mt-5">
         <img class="precio " src="../../menu-pizzamigo/precio-sin-num.png" alt="precio" srcset="">
-      </div>
+      </div> -->
       <div class="col-6 mt-5">
         <!-- costeleta con guar -->
         <p>Costelette With Garnish</p>
@@ -200,14 +200,14 @@
       </div>
 
       <div class="col-5 mt-5 ">
-        <img class="precio " src="../../menu-pizzamigo/800.png" alt="precio" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/1200.png" alt="precio" srcset="">
       </div>
       <div class="col-7 mt-5 text-end">
         <p>ONE SERVING OF FRIED POTATOES</p>
       </div>
 
       <div class="col-5 mt-5 ">
-        <img class="precio " src="../../menu-pizzamigo/1200.png" alt="precio" srcset="">
+        <img class="precio " src="../../menu-pizzamigo/1500.png" alt="precio" srcset="">
       </div>
       <div class="col-7 mt-5 text-center">
         <p>PAPAS BRAVAS (HOT FRIES WITH CHEDDAR AND BACON)</p>
