--- a/menu-pizzamigo/web/plato.html
+++ b/menu-pizzamigo/web/plato.html
@@ -98,24 +98,84 @@
       <div class="col-6 mt-5">
         <img class="precio " src="../3000.png" alt="3000" srcset="">
       </div>
-      <div class="col-6 mt-5">
-        <p>Brochet Mixtos</p>
+      <!-- <div class="col-6 mt-5">
+        <p>ochet Mixtos</p>
       </div>
       <div class="col-6 mt-5">
         <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
-      </div>
+      </div> -->
       <div class="col-6 mt-5">
         <p>Costeleta c/ Guarnición</p>
       </div>
       <div class="col-6 mt-5">
         <img class="precio " src="../3000.png" alt="3000" srcset="">
       </div>
+
+      <div class="col-6 mt-5">
+        <p>Costeleta a la Riojana c/ Guarnición</p>
+      </div>
+      <div class="col-6 mt-5">
+        <img class="precio" src="../precio-sin-num.png" alt="3200" srcset="">
+      </div>
+
+      <div class="col-6 mt-5">
+        <p>Milanesa de Cerdo</p>
+      </div>
+      <div class="col-6 mt-5">
+        <img src="../2500.png" class="precio" alt="" srcset="">
+      </div>
+
+
+      <div class="col-6 mt-5">
+        <p>Milanesa de Berenjena</p>
+      </div>
+      <div class="col-6 mt-5">
+        <img src="../2500.png" class="precio" alt="2700" srcset="">
+      </div>
+
+
+      <div class="col-6 mt-5">
+        <p>Suprema</p>
+      </div>
+      <div class="col-6 mt-5">
+        <img src="../precio-sin-num.png" class="precio" alt="2700" srcset="">
+      </div>
+
       <div class="col-6 mt-5">
         <p>Mila a Caballo c/ Guarnición</p>
       </div>
       <div class="col-6 mt-5">
         <img class="precio " src="../3000.png" alt="3000" srcset="">
       </div>
+
+
+
+      <div class="col-12 mt-5">
+        <h2 class="marco  text-center">GUARNICIÓN C/U $1500</h2>
+      </div>
+
+      <div class="col-12 text-center mt-5">
+        <p>Papas Fritas</p>
+      </div>
+      <div class="col-12 text-center mt-5">
+        <p>Puré</p>
+      </div>
+      <div class="col-12 text-center  mt-5">
+        <p>Arroz</p>
+      </div>
+      <div class="col-6 text-center align-self-center mt-5">
+        <p>Ensalada</p>
+      </div>
+      <div class="col-6  mt-5">
+        <div class="row">
+          <p>Completa</p>
+        </div>
+        <div class="row">
+          <p>Mixta</p>
+        </div>
+      </div>
+
+
       <!-- fin de al plato -->
 
       <!-- titulo empanada -->
@@ -190,14 +250,14 @@
       </div>
 
       <div class="col-5 mt-5 ">
-        <img class="precio " src="../800.png" alt="precio" srcset="">
+        <img class="precio " src="../1200.png" alt="precio" srcset="">
       </div>
       <div class="col-7 mt-5 text-end">
         <p>PORCIÓN DE PAPAS</p>
       </div>
 
       <div class="col-5 mt-5 ">
-        <img class="precio " src="../1200.png" alt="precio" srcset="">
+        <img class="precio " src="../1500.png" alt="precio" srcset="">
       </div>
       <div class="col-7 mt-5 text-center">
         <p>PAPAS BRAVAS CON CHEDDAR Y PANCETA</p>
