--- a/menu-pizzamigo/web/plato.html
+++ b/menu-pizzamigo/web/plato.html
@@ -115,11 +115,11 @@
         <p>Costeleta a la Riojana c/ Guarnición</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio" src="../precio-sin-num.png" alt="3200" srcset="">
+        <img class="precio" src="../3200.png" alt="3200" srcset="">
       </div>
 
       <div class="col-6 mt-5">
-        <p>Milanesa de Cerdo</p>
+        <p>Milanesa de Cerdo c/ Guarnición</p>
       </div>
       <div class="col-6 mt-5">
         <img src="../2500.png" class="precio" alt="" srcset="">
@@ -127,18 +127,18 @@
 
 
       <div class="col-6 mt-5">
-        <p>Milanesa de Berenjena</p>
+        <p>Milanesa de Berenjena c/ Guarnición</p>
       </div>
       <div class="col-6 mt-5">
-        <img src="../2500.png" class="precio" alt="2700" srcset="">
+        <img src="../2500.png" class="precio" alt="2500" srcset="">
       </div>
 
 
       <div class="col-6 mt-5">
-        <p>Suprema</p>
+        <p>Suprema c/ Guarnición</p>
       </div>
       <div class="col-6 mt-5">
-        <img src="../precio-sin-num.png" class="precio" alt="2700" srcset="">
+        <img src="../2700.png" class="precio" alt="2700" srcset="">
       </div>
 
       <div class="col-6 mt-5">
