--- a/menu-pizzamigo-english/web/plato.html
+++ b/menu-pizzamigo-english/web/plato.html
@@ -118,12 +118,85 @@
       <div class="col-6 mt-5">
         <img class="precio " src="../../menu-pizzamigo/3000.png" alt="3000" srcset="">
       </div>
+
+
+      <div class="col-6 mt-5">
+        <!--Costeleta a la Riojana c/ Guarnición -->
+
+        <p>Riojan style chops With Garnish</p>
+      </div>
+      <div class="col-6 mt-5">
+        <img class="precio" src="../../menu-pizzamigo/3200.png" alt="3200" srcset="">
+      </div>
+
+      <div class="col-6 mt-5">
+        <!-- <p>Milanesa de Cerdo c/ Guarnición</p> -->
+        <p>pork Milanesa With Garnish</p>
+      </div>
+      <div class="col-6 mt-5">
+        <img src="../../menu-pizzamigo/2500.png" class="precio" alt="" srcset="">
+      </div>
+
+
+      <div class="col-6 mt-5">
+        <!-- <p>Milanesa de Berenjena c/ Guarnición</p> -->
+        <p>eggplant Milanesa With Garnish</p>
+      </div>
+      <div class="col-6 mt-5">
+        <img src="../../menu-pizzamigo/2500.png" class="precio" alt="2500" srcset="">
+      </div>
+
+
+      <div class="col-6 mt-5">
+        <!-- <p>Suprema c/ Guarnición</p> -->
+        <p>Chicken Supreme With Garnish</p>
+      </div>
+      <div class="col-6 mt-5">
+        <img src="../../menu-pizzamigo/2700.png" class="precio" alt="2700" srcset="">
+      </div>
+
+
+
+
       <div class="col-6 mt-5">
         <!-- mila a caballo -->
         <p>Milanesa with fried egg</p>
       </div>
       <div class="col-6 mt-5">
         <img class="precio " src="../../menu-pizzamigo/3000.png" alt="3000" srcset="">
+      </div>
+
+
+
+      <div class="col-12 mt-5">
+        <h2 class="marco  text-center">Each Garnish $1500</h2>
+      </div>
+
+      <div class="col-12 text-center mt-5">
+        <!-- <p>Papas Fritas</p> -->
+        <p>French Fries</p>
+      </div>
+      <div class="col-12 text-center mt-5">
+        <!-- <p>Puré</p> -->
+        <p>mashed potatoes</p>
+      </div>
+      <div class="col-12 text-center  mt-5">
+        <!-- <p>Arroz</p> -->
+        <p>Rice</p>
+      </div>
+      <div class="col-6 text-center align-self-center mt-5">
+        <!-- <p>Ensalada</p> -->
+        <p>Salad</p>
+      </div>
+      <div class="col-6  mt-5">
+        <div class="row">
+          <!-- <p>Completa</p> -->
+          <p>Full</p>
+        </div>
+        <div class="row">
+          <!-- <p>Mixta</p> -->
+          <p>Mixed</p>
+        </div>
       </div>
       <!-- fin de al plato -->
 
