--- a/menu-pizzamigo/web/plato.html
+++ b/menu-pizzamigo/web/plato.html
@@ -54,7 +54,7 @@
         <p>Milanesa c/ Guarnición</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../2800.png" alt="$2800" srcset="">
+        <img class="precio " src="../3000.png" alt="$3000" srcset="">
       </div>
       <div class="col-6 mt-5">
         <p>Bife de lomo c/ Guarnición</p>
@@ -66,7 +66,7 @@
         <p>Napolitana c/ Guarnición</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../3000.png" alt="$3000" srcset="">
+        <img class="precio " src="../3200.png" alt="$3200" srcset="">
       </div>
       <div class="col-6 mt-5">
         <p>Costillitas a la barbacoa c/ papas Españolas</p>
@@ -108,7 +108,7 @@
         <p>Costeleta c/ Guarnición</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../3000.png" alt="3000" srcset="">
+        <img class="precio " src="../3300.png" alt="3300" srcset="">
       </div>
 
       <div class="col-6 mt-5">
@@ -122,7 +122,7 @@
         <p>Milanesa de Cerdo c/ Guarnición</p>
       </div>
       <div class="col-6 mt-5">
-        <img src="../2500.png" class="precio" alt="" srcset="">
+        <img src="../2700.png" class="precio" alt="$2700" srcset="">
       </div>
 
 
@@ -138,14 +138,14 @@
         <p>Suprema c/ Guarnición</p>
       </div>
       <div class="col-6 mt-5">
-        <img src="../2700.png" class="precio" alt="2700" srcset="">
+        <img src="../2800.png" class="precio" alt="2800" srcset="">
       </div>
 
       <div class="col-6 mt-5">
         <p>Mila a Caballo c/ Guarnición</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../3000.png" alt="3000" srcset="">
+        <img class="precio " src="../3200.png" alt="3200" srcset="">
       </div>
 
 
@@ -184,11 +184,11 @@
       </div>
       <div class="col-6 text-center">
         <p>Unidad</p>
-        <img class="precio" src="../300.png" alt="" srcset="">
+        <img class="precio" src="../350.png" alt="" srcset="">
       </div>
       <div class="col-6 text-center">
         <p>Docena</p>
-        <img class="precio" src="../3000.png" alt="" srcset="">
+        <img class="precio" src="../3500.png" alt="" srcset="">
       </div>
       <!-- contenido de entradas -->
       <div class="col-12 text-center mt-5">
@@ -217,21 +217,21 @@
       </div>
       <!-- contenido sandwich -->
       <div class="col-6 mt-5 ">
-        <img class="precio " src="../2500.png" alt="precio" srcset="">
+        <img class="precio " src="../2800.png" alt="precio" srcset="">
       </div>
       <div class="col-6 mt-5 text-end">
         <p>LOMO</p>
       </div>
 
       <div class="col-6 mt-5 ">
-        <img class="precio " src="../2500.png" alt="precio" srcset="">
+        <img class="precio " src="../2800.png" alt="precio" srcset="">
       </div>
       <div class="col-6 mt-5 text-end">
         <p>MILA</p>
       </div>
 
       <div class="col-5 mt-5 ">
-        <img class="precio " src="../2500.png" alt="precio" srcset="">
+        <img class="precio " src="../2600.png" alt="precio" srcset="">
       </div>
       <div class="col-7 mt-5 text-end">
         <p>HAMBURGUESA</p>
@@ -246,18 +246,18 @@
       </div>
       <div class="col-6  ">
         <p>2 PERSONAS</p>
-        <img class="precio " src="../5500.png" alt="$4500" srcset="">
+        <img class="precio " src="../6000.png" alt="$4500" srcset="">
       </div>
 
       <div class="col-5 mt-5 ">
-        <img class="precio " src="../1200.png" alt="precio" srcset="">
+        <img class="precio " src="../1500.png" alt="precio" srcset="">
       </div>
       <div class="col-7 mt-5 text-end">
         <p>PORCIÓN DE PAPAS</p>
       </div>
 
       <div class="col-5 mt-5 ">
-        <img class="precio " src="../1500.png" alt="precio" srcset="">
+        <img class="precio " src="../1800.png" alt="precio" srcset="">
       </div>
       <div class="col-7 mt-5 text-center">
         <p>PAPAS BRAVAS CON CHEDDAR Y PANCETA</p>
