--- a/menu-pizzamigo/web/desayuno.html
+++ b/menu-pizzamigo/web/desayuno.html
@@ -53,13 +53,13 @@
         </div>
         <div class="col-5">
           <!-- imagen del desayuno -->
-          <img class="precio" src="../1000.png" alt="" srcset="">
+          <img class="precio" src="../1400.png" alt="$1400" srcset="">
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-5">
           <!-- imagen del desayuno -->
-          <img class="precio" src="../1200.png" alt="" srcset="">
+          <img class="precio" src="../1600.png" alt="$1600" srcset="">
         </div>
         <div class="col-7 ">
           <h2 class="marco text-center">CONTINENTAL:</h2>
@@ -71,7 +71,7 @@
 
         <div class="col-6 text-center marco p-3" style="font-size: 1.3rem;">PROMO LICUADO + 1/2 TOSTADO</div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../1300.png" alt="" srcset="">
+          <img class="precio" src="../1700.png" alt="1700" srcset="">
         </div>
       </div>
 
@@ -79,7 +79,7 @@
       <div class="row mt-5">
         <div class="col-5">
           <!-- imagen del desayuno -->
-          <img class="precio" src="../1300.png" alt="" srcset="">
+          <img class="precio" src="../1500.png" alt="1500" srcset="">
         </div>
         <div class="col-7">
           <h2 class="marco text-center">LIGHT:</h2>
@@ -94,13 +94,13 @@
         </div>
         <div class="col-5">
           <!-- imagen del desayuno -->
-          <img class="precio" src="../1700.png" alt="" srcset="">
+          <img class="precio" src="../2000.png" alt="2000" srcset="">
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-5">
           <!-- imagen del desayuno -->
-          <img class="precio" src="../1400.png" alt="" srcset="">
+          <img class="precio" src="../1700.png" alt="1700" srcset="">
         </div>
         <div class="col-7">
           <h2 class="marco text-center">Jamón y Queso:</h2>
@@ -116,7 +116,7 @@
         </div>
         <div class="col-5">
           <!-- imagen del desayuno -->
-          <img class="precio" src="../1800.png" alt="" srcset="">
+          <img class="precio" src="../2000.png" alt="" srcset="">
         </div>
       </div>
 
@@ -124,7 +124,7 @@
       <div class="row mt-5">
         <div class="col-5">
           <!-- imagen del desayuno -->
-          <img class="precio" src="../3300.png" alt="" srcset="">
+          <img class="precio" src="../4000.png" alt="" srcset="">
         </div>
         <div class="col-7 ">
           <h2 class="marco text-center">COMBO AMERICANO:</h2>
@@ -142,27 +142,27 @@
           <p class="text-start">CAFÉ POCILLO</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../400.png" alt="$400" srcset="">
+          <img class="precio" src="../500.png" alt="$500" srcset="">
         </div>
         <div class="col-6 mt-5">
           <p>CAFÉ JARRITO</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../500.png" alt="$500" srcset="">
+          <img class="precio" src="../600.png" alt="$600" srcset="">
 
         </div>
         <div class="col-6 mt-5">
           <p>CAFÉ DOBLE</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../600.png" alt="$600" srcset="">
+          <img class="precio" src="../700.png" alt="$700" srcset="">
           <!-- precio -->
         </div>
         <div class="col-6 mt-5">
           <p>CAPUCHINO</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../700.png" alt="$700" srcset="">
+          <img class="precio" src="../900.png" alt="$900" srcset="">
           <!-- precio -->
         </div>
         <div class="col-6 mt-5">
@@ -176,28 +176,28 @@
           <p>JUGO CHICO</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../400.png" alt="$400" srcset="">
+          <img class="precio" src="../700.png" alt="$700" srcset="">
           <!-- precio -->
         </div>
         <div class="col-6 mt-5">
           <p>JUGO GRANDE</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../900.png" alt="$900" srcset="">
+          <img class="precio" src="../1250.png" alt="$1250" srcset="">
           <!-- precio -->
         </div>
         <div class="col-6 mt-5">
           <p>LICUADOS</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../900.png" alt="$900" srcset="">
+          <img class="precio" src="../1100.png" alt="$1100" srcset="">
           <!-- precio -->
         </div>
         <div class="col-6 mt-5">
           <p>SUBMARINO</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../700.png" alt="$700" srcset="">
+          <img class="precio" src="../900.png" alt="$900" srcset="">
           <!-- precio -->
         </div>
       </div>
@@ -208,7 +208,7 @@
         </div>
         <div class="row mt-5">
           <div class="col-6 mt-5">
-            <img class="precio" src="../200.png" alt="$300" srcset="">
+            <img class="precio" src="../450.png" alt="$450" srcset="">
             <!-- precio -->
           </div>
           <div class="col-6 mt-5">
@@ -222,7 +222,7 @@
             <p class="text-end">CRIOLLO</p>
           </div>
           <div class="col-6 mt-5">
-            <img class="precio" src="../300.png" alt="$300" srcset="">
+            <img class="precio" src="../600.png" alt="$600" srcset="">
             <!-- precio -->
           </div>
           <div class="col-6 mt-5">
@@ -243,14 +243,14 @@
             <p class="text-end">MANTECA Y MERMELADA O QUESO</p>
           </div>
           <div class="col-6 mt-5">
-            <img class="precio" src="../500.png" alt="$500" srcset="">
+            <img class="precio" src="../800.png" alt="$800" srcset="">
             <!-- precio -->
           </div>
           <div class="col-6 mt-5">
             <p class="text-end">HUEVO REVUELTO</p>
           </div>
           <div class="col-6 mt-5">
-            <img class="precio" src="../500.png" alt="$500" srcset="">
+            <img class="precio" src="../800.png" alt="$800" srcset="">
             <!-- precio -->
           </div>
           <div class="col-6 mt-5">
@@ -264,7 +264,7 @@
             <p class="text-end">JAMÓN Y QUESO</p>
           </div>
           <div class="col-6 mt-5">
-            <img class="precio" src="../1000.png" alt="$300" srcset="">
+            <img class="precio" src="../1200.png" alt="$1200" srcset="">
             <!-- precio -->
           </div>
           <div class="col-6 mt-5">
